# olukotan

./: .gitignore  ARCHITECTURE.md  EXPORTERS.md  IMPORTERS.md  LOCAL_STORAGE.md  PROJECT_FORMAT.md  README.md  RECOVERY.md  ROADMAP.md  TESTING.md  WEB_COMPANION.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.mjs
.github/workflows/: deploy-pages.yml
public/: manifest.webmanifest  sw.js
scripts/: generate-service-worker.mjs  verify-pwa.mjs
src/: App.tsx  google-drive.ts  main.tsx  platform.ts  styles.css  types.ts  web-store.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  error.rs  lib.rs  main.rs  model.rs  storage.rs
src/components/: CloudSyncPanel.tsx  CreateProjectDialog.tsx  Editor.test.tsx  Editor.tsx  ExportDialog.tsx  Home.tsx  ScreenplaySettingsDialog.tsx  SettingsDialog.tsx
src/lib/: exporters.test.ts  exporters.ts  screenplay-elements.test.ts  screenplay-elements.ts  screenplay-production.test.ts  screenplay-production.ts  screenplay.test.ts  screenplay.ts
